spelling mistake fixed
there was a spelling mistake and it is fixed.

//final design for main activity

--- a/GoodHabbits/app/src/main/res/layout/activity_main.xml
+++ b/GoodHabbits/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:onClick="enterMeditaionGoal"
-            android:text="MEDITAION GOAL"
+            android:text="MEDITATION GOAL"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.262"
