Back button added + tweaks for Water App
Added functionality and icons for back button

Made the list UI better for Water App and Water History UI more consistent

--- a/GoodHabbits/app/src/main/res/layout/activity_water.xml
+++ b/GoodHabbits/app/src/main/res/layout/activity_water.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/appTitleText3"
         android:layout_width="250dp"
-        android:layout_height="41dp"
+        android:layout_height="40dp"
         android:fontFamily="@font/manrope_bold"
         android:text="Hydration Analysis"
         android:textAlignment="center"
@@ -21,7 +21,20 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.941" />
+        app:layout_constraintVertical_bias="0.78" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:onClick="goBack"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.78"
+        app:srcCompat="@drawable/back_button" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout3"
@@ -172,4 +185,5 @@
             app:srcCompat="@drawable/history2" />
 
     </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
