--- a/GoodHabbits/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/GoodHabbits/app/src/main/res/drawable/circular_progress_bar.xml
@@ -12,8 +12,8 @@
         android:useLevel="true">
         <gradient
             android:angle="0"
-            android:endColor="#19c916"
-            android:startColor="#19c916"
+            android:endColor="#15d911"
+            android:startColor="#15d911"
             android:type="sweep"
             android:useLevel="false" />
     </shape>
