--- a/GoodHabbits/app/src/main/res/drawable/circular_shape.xml
+++ b/GoodHabbits/app/src/main/res/drawable/circular_shape.xml
@@ -5,5 +5,5 @@
     android:shape="ring"
     android:thickness="10dp"
     android:useLevel="false">
-    <solid android:color="#15d911" />
+    <solid android:color="#32b030" />
 </shape>
