--- a/GoodHabbits/app/src/main/res/layout/activity_day.xml
+++ b/GoodHabbits/app/src/main/res/layout/activity_day.xml
@@ -153,7 +153,6 @@
         android:id="@+id/sleepbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="sleepNow"
         android:text="SLEEP NOW"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -161,7 +160,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.65" />
-
+<!-- needs to be fixed
     <TextView
         android:id="@+id/goToSleepText"
         android:layout_width="wrap_content"
@@ -175,7 +174,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.544" />
+        app:layout_constraintVertical_bias="0.544" /> -->
 
     <Button
         android:id="@+id/bedTimeGoalBtn"
