--- a/GoodHabbits/app/src/main/res/layout/water_item_layout.xml
+++ b/GoodHabbits/app/src/main/res/layout/water_item_layout.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- author: Atte-->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:paddingLeft="6dp"
